--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <%= render:'navbar' %>navbar
+    <%= render 'components/navbar' %>
     <%= yield %>
   </body>
 </html>
