--- a/app/views/restaurants/edit.html.erb
+++ b/app/views/restaurants/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Restaurants#edit</h1>
-<p>Find me in app/views/restaurants/edit.html.erb</p>
+<div class="content">
+  <h1>Edit a restaurant!</h1>
+  <%= render 'form' %>
+</div>
