--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,2 +1,21 @@
-<h1>Restaurants#index</h1>
-<p>Find me in app/views/restaurants/index.html.erb</p>
+<div class="wrapper">
+  <div class="content">
+    <ul>
+      <% @restaurants.each do |restaurant| %>
+        <% url = restaurant.id %>
+        <li>
+          <h3><%= link_to restaurant.name, restaurant_path(restaurant)%></h3>
+          <div class="toolbar">
+            <a href='/restaurants/<%= url %>/edit'><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a>
+            <%= link_to "Edit", edit_restaurant_path(restaurant) %> |
+            <a data-confirm="Are you sure?" rel="nofollow" data-method="delete" href="/restaurants/<%= url %>"><i class="fa fa-times-circle-o" aria-hidden="true"></i></a> <%= link_to "Delete", restaurant_path(restaurant), method: :delete, data: { confirm: "Are you sure?" } %>
+          </div>
+          <div class="content-txt"><%= restaurant.address %></div>
+          <div class="content-txt"><%= restaurant.phone_number %></div>
+          <div class="content-txt"><%= restaurant.category %></div>
+        </li>
+      <% end %>
+    </ul>
+    <p style="text-align: center; margin-top: 20px"><%= link_to "Add a new restaurant", new_restaurant_path, class:"btn btn-primary" %></p>
+  </div>
+</div>
