--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,2 +1,4 @@
-<h1>Restaurants#new</h1>
-<p>Find me in app/views/restaurants/new.html.erb</p>
+<div class="content">
+  <h1>Add a new restaurant</h1>
+  <%= render 'form' %>
+</div>
