--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,71 @@
 // Specific CSS for your home-page
+body {
+  font-style: Open Sans;
+}
+
+h1 {
+  margin: 30px 10px 25px 0;
+  font-size: 30px;
+}
+
+h2 {
+  font-size: 20px;
+}
+
+h4 {
+  font-size: 14px;
+  color: #555555;
+  margin-top: 0;
+}
+
+li {
+  list-style-type: none;
+  margin-bottom: 25px;
+}
+
+li h3 {
+  font-size: 18px;
+  font-weight: 600;
+  margin: 35px 0 5px 0;
+  display: inline;
+}
+
+p {
+  margin-top: 0;
+}
+
+
+.wrapper {
+  width: 1001;
+  padding: 15px;
+}
+
+.content {
+  width: 700px;
+  margin: auto;
+  .a {
+    color: #3478D0;
+  }
+}
+
+.toolbar {
+  margin-bottom: 7px;
+  font-size: 15px;
+  .fa {
+    font-size: 15px;
+  }
+}
+
+.content-txt {
+  font-size: 12px;
+  .fa {
+    margin: 5px 7px 5px 7px;
+    font-size: 13px !important;
+  }
+}
+
+.btn {
+  font-size: 15px;
+  padding: 5px;
+  border-radius: 7px;
+}
